--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -31,6 +31,11 @@ jobs:
         submodules: recursive  # 递归克隆子模块
         fetch-depth: 0         # 加速克隆
 
+    # ---------------------- 阶段1.1：检查路径 ----------------------  
+    - name: 检查checkout之后的路径
+      run: |
+        ls
+        pwd
     # ---------------------- 阶段2：缓存管理 ----------------------
     - name: 📦 加载缓存
       uses: actions/cache@v3
@@ -45,6 +50,8 @@ jobs:
     # ---------------------- 阶段3：安装系统依赖 ----------------------
     - name: 📦 安装编译工具
       run: |
+        ls
+        pwd
         sudo apt-get update -y
         # 安装所有必要依赖（包含终端修复包）
         sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib \
