--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -36,6 +36,7 @@ jobs:
       run: |
         ls
         pwd
+        ls lede/
     # ---------------------- 阶段2：缓存管理 ----------------------
     - name: 📦 加载缓存
       uses: actions/cache@v3
@@ -67,7 +68,7 @@ jobs:
       run: |
         ls
         pwd
-        
+        ls lede/
         #cp lede/diy-part1.sh $GITHUB_WORKSPACE/lede/
         #cp lede/diy-part2.sh $GITHUB_WORKSPACE/lede/
 
