--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -112,7 +112,7 @@ jobs:
     # ---------------------- 阶段7：核心编译 ----------------------
     - name: 🔨 开始编译
       run: |
-        #cd lede
+        cd lede
         # 动态线程控制（防止OOM）
         MAX_CORES=$(nproc)
         SAFE_CORES=$(( MAX_CORES > 4 ? 4 : MAX_CORES ))
@@ -120,7 +120,7 @@ jobs:
         # 强制记录完整日志
         mkdir -p tmp/work/logs
         set -o pipefail
-        time make -j$SAFE_CORES V=sc 2>&1 defconfig | tee build.log tmp/work/logs/full.log
+        time make -j$SAFE_CORES V=sc 2>&1 | tee build.log tmp/work/logs/full.log
 
         # 验证固件存在性
         [ -f $FIRMWARE_DIR/*.img ] || (echo "❌ 固件未生成"; exit 1)
