--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -112,6 +112,9 @@ jobs:
     # ---------------------- 阶段7：核心编译 ----------------------
     - name: 🔨 开始编译
       run: |
+        ls
+        pwd
+        ls lede/
         cd lede
         # 动态线程控制（防止OOM）
         MAX_CORES=$(nproc)
@@ -128,7 +131,10 @@ jobs:
     # ---------------------- 阶段8：产物处理 ----------------------
     - name: 📦 打包输出
       run: |
-        #cd lede
+        ls
+        pwd
+        ls lede/
+        cd lede
         RELEASE_NAME="openwrt_x86_$(date +'%Y%m%d_%H%M')"
         mkdir -p $RELEASE_NAME
         cp $FIRMWARE_DIR/*.{img,sha256sum} $RELEASE_NAME/
