--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -11,28 +11,35 @@ jobs:
     timeout-minutes: 180
 
     steps:
-    # --- 步骤 1: 检出代码 ---
+    # --- Step 1: Checkout code ---
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         submodules: recursive
 
-    # --- 步骤 2: 生成日期变量 ---
+    # --- Step 2: Clean disk space ---
+    - name: Clean up disk space
+      run: |
+        sudo apt-get clean
+        sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc /swapfile
+
+    # --- Step 3: Generate Date ---
     - name: Generate Date
       id: date
       run: |
         DATE=$(date +'%Y%m%d-%H%M')
         echo "PACKAGED_OUTPUTDATE=${{ github.run_id }}_$DATE" >> $GITHUB_ENV
-    # --- 步骤 3: 缓存依赖 ---
+
+    # --- Step 4: Cache dependencies ---
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
         path: |
-          lede/ccache  # 编译缓存
-          lede/dl      # 预下载的源码包
+          lede/ccache
+          lede/dl
         key: ${{ runner.os }}-lede-${{ hashFiles('.config') }}-${{ github.sha }}
 
-    # --- 步骤 4: 安装编译依赖 ---
+    # --- Step 5: Install dependencies ---
     - name: Install dependencies
       run: |
         sudo apt-get update -y
@@ -45,7 +52,8 @@ jobs:
           libtool llvm ninja-build p7zip p7zip-full patch pkgconf python3 python3-pyelftools \
           python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo \
           uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev jq zstd libzstd-dev
-    # --- 步骤 5: 准备编译环境 ---
+
+    # --- Step 6: Prepare build environment ---
     - name: Prepare build environment
       run: |
         git clone https://github.com/coolsnowwolf/lede.git lede
@@ -54,38 +62,44 @@ jobs:
         ./scripts/feeds install -a
         cp $GITHUB_WORKSPACE/.config .
         make defconfig
-    # --- 步骤 6: 编译固件 ---
+
+    # --- Step 7: Check disk space ---
+    - name: Check disk space
+      run: df -h
+
+    # --- Step 8: Compile LEDE ---
     - name: Compile LEDE
       id: compile
       run: |
         cd lede
-        make -j$(($(nproc) + 1)) V=s
-      continue-on-error: false  # 失败则停止
+        make clean
+        make -j$(nproc) V=s
+      continue-on-error: false
 
-    # --- 步骤 7: 上传到 Release ---
+    # --- Step 9: Upload to Release ---
     - name: Upload to Release
-      if: ${{ steps.compile.outcome == 'success' }}  # 仅在编译成功时触发
+      if: ${{ steps.compile.outcome == 'success' }}
       uses: ncipollo/release-action@v1
       with:
         tag: OpenWrt_nokia_ea0326gmp_${{ env.PACKAGED_OUTPUTDATE }}
-        artifacts: "lede/bin/targets/*/*/*.bin"      # 匹配所有固件文件
+        artifacts: "lede/bin/targets/*/*/*.bin"
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ### 基于 Lean 的 LEDE 源码构建
-          **首次使用建议全新刷写**
+          ### Built from Lean's LEDE source
+          **First use recommended to flash fresh**
           
-          **基本信息**
-          - 管理 IP: 192.168.1.1
-          - 用户名: root
-          - 密码: password
-          - 设备型号: nokia_ea0326gmp
+          **Basic Info**
+          - Admin IP: 192.168.1.1
+          - Username: root
+          - Password: password
+          - Device: nokia_ea0326gmp
           
-          **注意事项**
-          - 首次刷机请使用 factory 固件
-          - 升级请使用 sysupgrade 固件
-          - 刷机前请备份重要数据
+          **Notes**
+          - Use factory image for first flash
+          - Use sysupgrade for updates
+          - Backup important data before flashing
           
-          **构建信息**
-          - 构建时间: ${{ env.PACKAGED_OUTPUTDATE }}
-          - Git提交: ${{ github.sha }} 
+          **Build Info**
+          - Build time: ${{ env.PACKAGED_OUTPUTDATE }}
+          - Git commit: ${{ github.sha }}
