--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -14,11 +14,23 @@ jobs:
     timeout-minutes: 240
 
     steps:
+    - name: Display disk space before checkout
+      run: |
+        echo "磁盘空间信息 (checkout 前):"
+        df -h
+        du -sh ~/*
+
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         submodules: recursive
         fetch-depth: 0
+
+    - name: Display disk space after checkout
+      run: |
+        echo "磁盘空间信息 (checkout 后):"
+        df -h
+        du -sh ~/*
 
     - name: Generate Date
       id: date
@@ -26,8 +38,9 @@ jobs:
         DATE=$(date +'%Y%m%d-%H%M')
         echo "PACKAGED_OUTPUTDATE=${{ github.run_id }}_$DATE" >> $GITHUB_ENV
 
-    - name: Display disk space before build
+    - name: Display disk space before cache restore
       run: |
+        echo "磁盘空间信息 (缓存恢复前):"
         df -h
         du -sh ~/*
 
@@ -40,6 +53,12 @@ jobs:
         key: ${{ runner.os }}-lede-${{ hashFiles('.config') }}-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-lede-${{ hashFiles('.config') }}-
+
+    - name: Display disk space after cache restore
+      run: |
+        echo "磁盘空间信息 (缓存恢复后):"
+        df -h
+        du -sh ~/*
 
     - name: Install dependencies
       run: |
@@ -58,6 +77,12 @@ jobs:
         sudo apt-get clean
         sudo rm -rf /var/lib/apt/lists/*
 
+    - name: Display disk space after dependencies install
+      run: |
+        echo "磁盘空间信息 (依赖安装后):"
+        df -h
+        du -sh ~/*
+
     - name: Prepare build environment
       run: |
         git clone https://github.com/coolsnowwolf/lede.git lede
@@ -67,6 +92,12 @@ jobs:
         cp $GITHUB_WORKSPACE/.config .
         make defconfig
 
+    - name: Display disk space before compilation
+      run: |
+        echo "磁盘空间信息 (编译前):"
+        df -h
+        du -sh ~/*
+
     - name: Compile LEDE with disk space optimization
       id: compile
       run: |
@@ -74,7 +105,7 @@ jobs:
         
         # 配置ccache并限制大小
         echo "export USE_CCACHE=1" >> ~/.bashrc
-        echo "export CCACHE_MAXSIZE=300M" >> ~/.bashrc  # 减小ccache最大大小
+        echo "export CCACHE_MAXSIZE=300M" >> ~/.bashrc
         echo "export CCACHE_DIR=$(pwd)/ccache" >> ~/.bashrc
         source ~/.bashrc
         ccache -z
@@ -94,16 +125,26 @@ jobs:
         
         # 显示ccache统计信息和磁盘使用情况
         ccache -s
+
+    - name: Display disk space after compilation
+      run: |
+        echo "磁盘空间信息 (编译后):"
         df -h
-        du -sh *
+        du -sh ~/*
 
     - name: Collect firmware files
       if: success() || failure()
       run: |
         mkdir -p firmware
         find lede/bin/targets/ -name "*.bin" -exec cp {} firmware/ \;
-        find lede/bin/targets/ -name "*.img.gz" -exec cp {} firmware/ \;  # 也收集gz压缩的镜像
+        find lede/bin/targets/ -name "*.img.gz" -exec cp {} firmware/ \;
         ls -la firmware/
+
+    - name: Display disk space before creating PR
+      run: |
+        echo "磁盘空间信息 (创建PR前):"
+        df -h
+        du -sh ~/*
 
     - name: Create Pull Request with changes
       if: ${{ steps.compile.outcome == 'success' }}
@@ -121,5 +162,6 @@ jobs:
     - name: Display disk space after build
       if: always()
       run: |
+        echo "磁盘空间信息 (构建完成后):"
         df -h
         du -sh ~/*
