--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  actions: read  # 确保有读取actions的权限
 
 jobs:
   build:
@@ -196,13 +197,24 @@ jobs:
           echo "警告: 未找到固件文件!"
         fi
 
-    - name: Upload build logs as artifact
+    - name: Upload build logs as artifact (with retry)
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # 更新到最新版本
+      continue-on-error: true  # 允许失败继续
       with:
         name: build-logs
         path: $GITHUB_WORKSPACE/build_logs/
         retention-days: 7
+
+    - name: Alternative method to save build logs
+      if: failure()
+      run: |
+        # 如果上传失败，尝试将日志添加到评论中
+        echo "Build logs:"
+        echo "==========="
+        cat $GITHUB_WORKSPACE/build_logs/final_failure.log || true
+        echo "==========="
+        echo "End of build logs"
 
     - name: Display disk space before creating PR
       run: |
